TMS Manual Launches + another fixes